domain to wewb mapping
